2002-03-05  Kjetil Jacobsen  <kjetilja>

	* Do not allow WRITEFUNCTION and WRITEHEADER on the same handle.

2002-02-27  Kjetil Jacobsen  <kjetilja>

	* Abort callback if the thread state of the calling thread cannot
	be determined.

	* Check that the installed version of libcurl matches the
	requirements of pycurl.

2002-02-26  Kjetil Jacobsen  <kjetilja>

	* Clarence Garnder <clarence@silcom.com> found a bug where string
	arguments to setopt sometimes were prematurely deallocated, this
	should now be fixed.

2002-02-21  Kjetil Jacobsen  <kjetilja>

	* Added the 'xmlrpc_curl.py' file which implements a transport
	for xmlrpclib (xmlrpclib is part of Python 2.2).

	* Added CURLINFO_CONTENT_TYPE.

	* Added CURLOPT_SSLCERTTYPE, CURLOPT_SSLKEY, CURLOPT_SSLKEYTYPE,
	CURLOPT_SSLKEYPASSWD, CURLOPT_SSLENGINE and
	CURLOPT_SSLENGINE_DEFAULT.

	* When thrown, the pycurl.error exception is now a tuple consisting
	of the curl error code and the error message.
	
	* Now requires libcurl 7.9.4 or greater.
	
2002-02-19  Kjetil Jacobsen  <kjetilja>

	* Fixed docstring for getopt() function.

2001-12-18  Kjetil Jacobsen  <kjetilja>

	* Updated the INSTALL information for Win32.

2001-12-12  Kjetil Jacobsen  <kjetilja>

	* Added missing link flag to make pycurl build on MacOS X (by Matt
	King <matt@gnik.com>).

2001-12-06  Kjetil Jacobsen  <kjetilja>

	* Added CURLINFO_STARTTRANSFER_TIME and CURLOPT_FTP_USE_EPSV from
	libcurl 7.9.2.

2001-12-01  Markus F.X.J. Oberhumer <mfx>

	* Added the 'test_stringio.py' file which demonstrates the use of
	StringIO objects as callback.

2001-12-01  Markus F.X.J. Oberhumer <mfx>

	* setup.py: Do not remove entries from a list while iterating
	over it.

2001-11-29  Kjetil Jacobsen  <kjetilja>

	* Added code in setup.py to install on Windows.  Requires some
	manual configuration (by Tino Lange <Tino.Lange@gmx.de>).

2001-11-27  Kjetil Jacobsen  <kjetilja>

	* Improved detection of where libcurl is installed in setup.py.